<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="327dp"
        android:layout_height="199dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/login_illu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/sen_regular"
        android:text="@string/login"
        android:textColor="#0C2F3D"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRegiste456"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/sen_regular"
        android:text="@string/dont_have_acoount"
        android:textColor="#0C2F3D"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btRegister"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/btRegister"
        app:layout_constraintTop_toBottomOf="@+id/progressbar12" />

    <TextView
        android:id="@+id/tvRegisterhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/sen_regular"
        android:text="@string/register_here"
        android:onClick="goToRegister"
        android:textColor="#EB1809"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvRegiste456"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/tvRegiste456"
        app:layout_constraintTop_toBottomOf="@+id/tvRegiste456" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/sen_regular"
        android:text="@string/enter_roll_number_and_pass"
        android:textColor="#0C2F3D"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <EditText
        android:id="@+id/etRollnumber1"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:fontFamily="@font/sen_regular"
        android:hint="@string/roll_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="#252529"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/etPassword1"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/sen_regular"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="#252529"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRollnumber1" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/sen_regular"
        android:onClick="loginUser"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword1" />


    <ProgressBar
        android:id="@+id/progressbar12"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="247dp"
        android:layout_marginTop="6dp"
        android:layout_height="21dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/btRegister"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/btRegister"
        app:layout_constraintTop_toBottomOf="@+id/btRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>